<resources>
    <string name="app_name">3 grammes</string>
    <string name="picolo_title">Dans ta gueule !</string>
    <string name="ttb_title">Tic Tac Boom !</string>
    <string name="red_or_black_title">Le cardinal</string>
    <string name="about">A propos</string>
    <string name="rules">Règles</string>
    <string name="picolo_rules">Règles du \"Dans ta gueule !\"</string>
    <string name="ttb_rules">Règles du \"Tit Tac Boom\"</string>
    <string name="main_menu">Menu principal</string>
    <string name="go_back">Retour</string>
    <string name="dark_side">%1$s est du côté obscur de la force</string>
    <string name="jedi_down">%1$d/3 Jedi vaincus</string>
    <string name="red_or_black_rules">Règles du \"Cardinal\"</string>
    <string name="end_with_pyramid">Terminer par une pyramide</string>
    <string name="rob_question1">, rouge ou noir ?</string>
    <string name="rob_question2">, intérieur ou extérieur ?</string>
    <string name="rob_question3">, entre ou en-dehors ?</string>
    <string name="rob_question4">, trèfle, carreau, coeur ou pique ?</string>
    <string name="rob_question5">, paire, impaire ou tête ?</string>
    <string name="rob_red">Rouge</string>
    <string name="rob_black">Noir</string>
    <string name="rob_upper">Au-dessus</string>
    <string name="rob_under">En-dessous</string>
    <string name="rob_between">Intérieur</string>
    <string name="rob_outside">Extérieur</string>
    <string name="rob_spades">Pique</string>
    <string name="rob_clubs">Trèfle</string>
    <string name="rob_hearts">Coeur</string>
    <string name="rob_diamonds">Carreau</string>
    <string name="rob_odd">Impaire</string>
    <string name="rob_pair">Paire</string>
    <string name="rob_face">Tête</string>
    <string name="rob_win">Gagné ! %1$s distribue %2$d gorgée(s) ! </string>
    <string name="rob_lose">Perdu ! %1$s prend %2$d gorgée(s) ! </string>
    <string name="pyramid_result">%1$s possède %2$d %3$s, il/elle %4$s %5$d gorgée(s) !</string>
    <string name="give">distribue</string>
    <string name="take">prend</string>
    <string name="alert_exit_game">Voulez vous vraiment quitter la partie ?</string>
    <string name="error_empty_tags">Veuillez remplir tous les champs de noms</string>
    <string name="alert_number_of_set">En raison du grand nombre de joueur, %1$d jeux de carte seront utilisés</string>
    <string name="player">Joueur</string>
    <string name="run_game">C\'est parti !</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="ok">OK</string>
    <string name="nb_players">%1$d joueurs</string>
    <string name="as">As</string>
    <string name="two">Deux</string>
    <string name="three">Trois</string>
    <string name="four">Quatre</string>
    <string name="five">Cinq</string>
    <string name="six">Six</string>
    <string name="seven">Sept</string>
    <string name="eight">Huit</string>
    <string name="nine">Neuf</string>
    <string name="ten">Dix</string>
    <string name="jack">Valet(s)</string>
    <string name="queen">Reine(s)</string>
    <string name="king">Roi(s)</string>
    <string-array name="picolo_normals">
        <item>Ceux qui ne sont pas nés en France prennent 2 gorgées</item>
        <item>Si tu aimes lire boit trois gorgées </item>
        <item>[Name1] et [Name2] vous devez vous mettre d\'accord sur la personne la plus débile de la soirée, elle devra boire deux coups</item>
        <item>Le plus bourré offre trois coup aux personnes de sont choix ou à lui même </item>
        <item>Buvez autant de gorgées que vous avez de vêtements noirs sur vous</item>
        <item>Si il est plus de 23 h tout le monde boit un coup</item>
        <item>Prends 2 gorgées si tu es née en [RandomMonth]</item>
        <item>Tous ceux qui ont un ou plusieurs chats distribuent trois coups</item>
        <item>Si ton prénom contient un [RandomLetter], distribues 2 gorgées</item>
        <item>Ceux qui ont déjà fait un coma éthylique, vous avez assez fait de dégâts comme ça, ces coups ne vous sont donc pas adressés. Ceux qui ont des limites boivent deux gorgées !</item>
        <item>[Name1], prêtes ton téléphone dévérouillé à [Name2] pendant 10 minutes ou prends 8 gorgées</item>
        <item>si tu es né un jour pair prends une gorgée, sinon distribues en 2</item>
        <item>Si tu portes un short bois un coup</item>
        <item>Le plus vieux prend 3 gorgées</item>
        <item>Les fans de Jul prennent 3 gorgées</item>
        <item>La personne qui a le plus voyagé distribues 4 gorgées</item>
        <item>Ceux qui n\'ont pas le permis peuvent boire sans problème, 4 gorgées pour vous</item>
        <item>Toutes les blondasses prennent 2 gorgées</item>
        <item>Si tu as du whisky dans ton verre, prends une gorgée</item>
        <item>Distribue 3 gorgées si tu n\'aimes pas le foot</item>
        <item>Distribues 2 gorgées si tu regardes Game of Thrones</item>
        <item>Bois 2 gorgées si tu as déjà menti à une personne dans cette pièce pour ne pas aller à sa soirée</item>
        <item>[Name1] pose une question indiscrète à [Name2]. [Name2] doit répondre ou prendre 6 gorgées</item>
        <item>Tout le monde prend autant de gorgées qu\'il a d\'animaux</item>
        <item>[Name1] choisit la prochaine musique</item>
        <item>[Name1] racontes ta meilleure blague, tous ceux qui sont surpris à sourire prennent 2 gorgées</item>
        <item>Les tatoués boivent 3 gorgées</item>
        <item>Ceux qui font du sport doivent boires 4 gorgés</item>
        <item>Les célibataires boivent 3 gorgés</item>
        <item>[Name1] raconte une blague et prend 3 gorgées si personne ne rigole</item>
        <item>La personne qui le plus grand nez prend 2 gorgées</item>
        <item>Les imberbes boivent 3 gorgées</item>
        <item>Les barbus boivent 3 gorgées</item>
        <item>Attention au géant ! La personne la plus grande prend 2 gorgées</item>
        <item>Tous les pauvres étudiants qui n\'ont pas de salaire peuvent distribuer 3 gorgées</item>
        <item>Tournée du patron ! Tout le monde boit un coup</item>
        <item>Les filles boivent autant de fois qu\'il y\'a de garçon dans la salle</item>
        <item>Les garçons boivent autant de fois qu\'il y a de fille dans la salle</item>
        <item>Tous les bigleux qui portent des lunettes prennent 3 gorgées</item>
        <item>[Name1] distribue un certain nombre de gorgées à la personne de son choix, mais en boit autant</item>
        <item>Toutes les femmes prennent 3 gorgées</item>
    </string-array>
    <string-array name="picolo_games">
        <item>Calcul mental : Random100 + Random100 - Random100. Le premier qui trouve distribue 5 gorgées</item>
        <item>Les marques de cigarettes. Celui qui n\'a plus d\'idées ou qui répète bois 3 gorgées</item>
        <item>Les marques de whisky. Celui qui n\'a plus d\'idées ou qui répète bois 3 gorgées</item>
        <item>Les marques de bières. Celui qui n\'a plus d\'idées ou qui répète bois 3 gorgées </item>
        <item>Phrase de l\'impossible ! Tout le monde récite cette phrase le plus vite possible le perdant boit trois gorgées : Trois tortues trottait sur trois toit très étroit</item>
        <item>[Name1] prends une capsule de bière et vise un verre à plus d\'un mètre. 5 gorgées sont en jeu, elles sont pour le propriétaire si tu vises juste, pour toi sinon</item>
        <item>Tout le monde donne une lettre tour à tour, le but est de former un mot. Celui qui termine le mot ou qui se trompe prend 2 gorgées, [Name1] commence</item>
        <item>Les films de Nicolas Cage, celui qui n\'a plus d\'idées ou qui répète prend 3 gorgées</item>
        <item>Bras de fer entre [Name1] et [Name2], 4 gorgées en jeu</item>
        <item>Pierre-feuille-ciseaux entre [Name1] et [Name2] en 3 manches gagnantes. Le perdant prend 4 gorgées</item>
        <item>Les prénoms qui commencent par la lettre que [Name1] choisit, celui qui répète ou n\'a plus d\'idées prend 2 gorgées</item>
        <item>Les personnages de Marvel celui qui répète ou qui n\'a plus d\'idées boit 2 gorgées [Name1] commence </item>
        <item>Tout le monde désigne le plus gros buveur de la salle selon lui. Tout le monde vote en même temps, la personne désignée boit 3 gorgées</item>
        <item>Suite de mots : [Name1] Dit un mot, la personne à sa droite dit un mot en rapport avec ce dernier et ainsi de suite. Le premier qui se trompe ou qui répète un mot déjà dit prend 4 gorgées</item>
        <item>[Name1] pense à un objet qui se trouve dans la pièce, le premier qui devine ses pensées distribue 3 gorgées</item>
        <item>Téléphone arabe : Tout le monde ajoute un mot au bout de la phrase en répétant l\'intégralité de la phrase. Le premier qui se trompe prend 3 gorgées. [Name1] commence</item>
        <item>Ne pas lire à voix haute ! La personne qui lit lève la main et regarde les autres. Si personne ne fait pareil au bout de 10 secondes, tout le monde prend 2 gorgées, sinon, la dernière personne à lever la main prend 5 gorgées</item>
        <item>Vous devez désignez la personne la plus bourré d\'entre vous. Tout le monde vote en même temps, la personne désignée prend 3 gorgées</item>
        <item>Les pokémons : Celui qui n\'a plus d\'idées où qui répète boit 3 gorgées</item>
    </string-array>
    <string-array name="picolo_prefers">
        <item>Facebook ou Twitter ? Tout le monde vote en même temps, les minoritaires prennent 3 gorgées</item>
        <item>Chocolatine ou pain au chocolat ? Tout le monde vote en même temps les minoritaires boivent 3 gorgées</item>
        <item>Kebab ou pizza ? Tout le monde vote en même temps les minoritaires boivent 3 gorgées</item>
        <item>Electro ou rap ? Tout le monde vote en meme temps Les minoritaires boivent 3 gorgées</item>
        <item>Kronenbourg ou Heineken ? Tout le monde vote en même temps les minoritaires prennent 3 gorgées</item>
        <item>KFC ou McDonalds ? Tout le monde vote en même temps, les minoritaires prennent 2 gorgées</item>
        <item>Ne pas aller aux toilettes pendant une semaine ou assister à un concert de Justin Bieber ? Tout le monde vote en même temps, les minoritaires prennent 2 gorgées</item>
        <item>Vivre sans bras ou sans jambes ? Tout le monde vote en même temps, les minoritaires prennent 2 gorgées</item>
    </string-array>
    <string-array name="picolo_maledictions">

        <item>[Name1] doit maintenant lever la main et attendre qu\'on l\'interroge pour parler</item>	<item>Tout le monde échange son verre avec son voisin de droite</item>
        <item>[Name1] n\'as plus le droit de parler à [Name2] sous peine de prendre 4 gorgées</item>
        <item>Plus personne ne touche la table, si quelqu\'un la touche il boit 4 gorgées</item>
        <item>[Name1] doit vouvoyer [Name2], 2 gorgées à chaque oubli</item>
        <item>[Name1] est un(e) alcoolique et boit double jusqu\'à nouvel ordre !</item>
        <item>[Name1] doit boire de sa mauvaise main sous peine de prendre 2 gorgées. Si quelqu\'un l\'accuse à tort, il prend 5 gorgées</item>
        <item>Tout le monde échange son prénom avec la personne située à sa gauche, si quelqu\'un se trompe de prénom il boit 2 gorgées</item>
        <item>[Name1] devient le larbin de [Name2]. [Name2] peut alors léguer toutes ses gorgées à [Name1]</item>
        <item>Nouvelle règle ! [Name1] doit parler avec l\'accent belge et boit 2 gorgées à chaque oubli</item>
    </string-array>
    <string name="sexy_cat">Sexy</string>
    <string name="hard_cat">Hard</string>
    <string name="dumb_cat">Débiles</string>
</resources>