<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/menu_to_hide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.jerome.a3grammes.Global.TextViewPlus
                android:id="@+id/tv_title_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MainTitlePicolo"
                android:text="@string/picolo_title"
                foo:customFont="Sketch_Block.ttf"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <CheckBox
                    android:id="@+id/dumb_cat"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dumb_cat"
                    style="@style/NormalGreyText"
                    android:layout_margin="@dimen/primary_margin"/>

                <CheckBox
                    android:id="@+id/sexy_cat"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexy_cat"
                    style="@style/NormalGreyText"
                    android:layout_margin="@dimen/primary_margin"/>

                <CheckBox
                    android:id="@+id/hard_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hard_cat"
                    style="@style/NormalGreyText"
                    android:layout_margin="@dimen/primary_margin"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <ImageButton
                        android:id="@+id/ib_remove_player"
                        android:layout_width="@dimen/little_button_size"
                        android:layout_height="@dimen/little_button_size"
                        android:background="@drawable/ic_minus"
                        android:layout_gravity="center_horizontal|end"
                        android:backgroundTint="@color/grey"
                        android:layout_margin="@dimen/primary_margin"
                        />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">


                    <ImageButton
                        android:id="@+id/ib_add_player"
                        android:layout_width="@dimen/little_button_size"
                        android:layout_height="@dimen/little_button_size"
                        android:background="@drawable/ic_plus"
                        android:layout_gravity="center_horizontal|start"
                        android:backgroundTint="@color/grey"
                        android:layout_margin="@dimen/primary_margin"
                        />

                </FrameLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/nb_players_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PicoloSettingsTheme"
                android:gravity="center"
                android:textSize="@dimen/normal_text_size"/>

        </LinearLayout>

        <ScrollView
            android:id="@+id/sv_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="60dp">

            <LinearLayout
                android:id="@+id/names_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"/>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/but_run_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle_border"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="@dimen/little_button_size"
            android:layout_height="@dimen/little_button_size"
            android:background="@drawable/ic_play"
            android:backgroundTint="@color/light_blue"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run_game"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/primary_margin"
            android:layout_marginRight="@dimen/primary_margin"
            android:textStyle="bold"/>

    </LinearLayout>


</RelativeLayout>