<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Picolo tile -->
            <RelativeLayout
                android:id="@+id/picolo_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/picolo_gradient"
                android:layout_margin="@dimen/tiles_margin">

                <FrameLayout
                    android:id="@+id/picolo_icon_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/primary_margin"
                        android:layout_marginRight="@dimen/primary_margin"
                        android:layout_marginTop="@dimen/big_margin"
                        android:layout_marginBottom="@dimen/big_margin"
                        android:background="@drawable/ic_beer"/>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_picolo_dark"
                    android:layout_below="@id/picolo_icon_container"
                    android:orientation="horizontal">

                    <com.example.jerome.a3grammes.Global.TextViewPlus
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/picolo_title"
                        style="@style/TilesTextTheme"
                        android:layout_weight="0.5"
                        foo:customFont="Sketch_Block.ttf"
                        android:lines="1"
                        singleLine="false"
                        android:ellipsize="end"/>

                    <ImageButton
                        android:id="@+id/picolo_rules_button"
                        android:layout_width="@dimen/rules_icon_size"
                        android:layout_height="@dimen/rules_icon_size"
                        android:background="@drawable/ic_info"
                        android:layout_marginRight="@dimen/primary_margin"
                        android:layout_marginTop="@dimen/primary_margin"
                        android:layout_marginBottom="@dimen/primary_margin"
                        />

                </LinearLayout>

            </RelativeLayout>

            <!-- Tic Tac Boom tile -->
            <RelativeLayout
                android:id="@+id/ttb_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ttb_gradient"
                android:layout_margin="@dimen/tiles_margin">

                <FrameLayout
                    android:id="@+id/ttb_icon_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/primary_margin"
                        android:layout_marginRight="@dimen/primary_margin"
                        android:layout_marginTop="@dimen/big_margin"
                        android:layout_marginBottom="@dimen/big_margin"
                        android:background="@drawable/ic_beer"/>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_ttb_dark"
                    android:layout_below="@id/ttb_icon_container"
                    android:orientation="horizontal">

                    <com.example.jerome.a3grammes.Global.TextViewPlus
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ttb_title"
                        style="@style/TilesTextTheme"
                        android:layout_weight="0.5"
                        foo:customFont="Sketch_Block.ttf"
                        android:lines="1"
                        singleLine="false"
                        android:ellipsize="end"/>

                    <ImageButton
                        android:id="@+id/ttb_rules_button"
                        android:layout_width="@dimen/rules_icon_size"
                        android:layout_height="@dimen/rules_icon_size"
                        android:background="@drawable/ic_info"
                        android:layout_marginRight="@dimen/primary_margin"
                        android:layout_marginTop="@dimen/primary_margin"
                        android:layout_marginBottom="@dimen/primary_margin"
                        />

                </LinearLayout>

            </RelativeLayout>

            <!-- red or black tile -->

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/red_or_black_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rob_gradient"
                android:layout_margin="@dimen/tiles_margin">

                <FrameLayout
                    android:id="@+id/red_or_black_icon_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/primary_margin"
                        android:layout_marginRight="@dimen/primary_margin"
                        android:layout_marginTop="@dimen/big_margin"
                        android:layout_marginBottom="@dimen/big_margin"
                        android:background="@drawable/ic_cards"/>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_red_or_black_dark"
                    android:layout_below="@id/red_or_black_icon_container"
                    android:orientation="horizontal">

                    <com.example.jerome.a3grammes.Global.TextViewPlus
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/red_or_black_title"
                        style="@style/TilesTextTheme"
                        android:layout_weight="0.5"
                        foo:customFont="Sketch_Block.ttf"
                        android:lines="1"
                        singleLine="false"
                        android:ellipsize="end"/>

                    <ImageButton
                        android:id="@+id/red_or_black_rules_button"
                        android:layout_width="@dimen/rules_icon_size"
                        android:layout_height="@dimen/rules_icon_size"
                        android:background="@drawable/ic_info"
                        android:layout_marginRight="@dimen/primary_margin"
                        android:layout_marginTop="@dimen/primary_margin"
                        android:layout_marginBottom="@dimen/primary_margin"
                        />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/primary_red_or_black"
                android:layout_marginLeft="@dimen/tiles_margin"
                android:layout_marginRight="@dimen/tiles_margin">

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>